constructor is called fat jar